# tinyml-dualmodel-controller

./: .gitignore  LICENSE  README.md
docs(Chinese)/: 00平台与模型预研.md  01项目需求.md  02需求分析.md  06基于STM32CubeMx实现FreeRtos移植(预研阶段).md
preliminary/: CMakeLists.txt  STM32H750XBHX_FLASH.ld  STM32H750XX_FLASH.ld  build.sh  freertos_lled.ioc  freertos_test.ioc  toolchain-arm-none-eabi.cmake
preliminary/Core/Inc/: main.h  stm32h7xx_it.h
preliminary/Core/Src/: freertos.c  gpio.c  main.c  stm32h7xx_it.c  usart.c
preliminary/Drivers/CMSIS/DSP/Source/BasicMathFunctions/: arm_add_f64.c
preliminary/cmake/stm32cubemx/: CMakeLists.txt
preliminary/tflite_micro/tensorflow/lite/: version.h
training/audio_keyword/data/: speech_commands.py
training/audio_keyword/export_model/: export_tflite.py
training/audio_keyword/model_training/: model.py  train_model.py
training/audio_keyword/scripts/: check_data_intergrity.py  precompute_features.py
training/audio_keyword/utils/: config.py
training/face_pretrain/data/: download_face_data.py  generate_dataset.py  preprocess_images.py
training/face_pretrain/model_training/: model.py  train_model.py
training/face_pretrain/utils/: config.py
